--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <img src="assets/images/cover 9.png" alt="song-img">
                     <i class="fa-solid fa-pause"></i>
                 </div>
-                <p class="song-name">Yahweh - Labisi</p>
+                <p class="song-name">Yahweh</p>
 
             </div>
 
@@ -193,7 +193,7 @@
                     <img src="assets/images/cover 9.png" alt="song-img">
                     <i class="fa-solid fa-pause"></i>
                 </div>
-                <p class="song-name">Nathaniel Bassey - 82Hours MMP</p>
+                <p class="song-name">Nathaniel Bassey @ 82Hours MMP</p>
 
             </div>
 
